<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>gov.faa.ait</groupId>
    <artifactId>apra</artifactId>
    <packaging>war</packaging>
    <version>1.2.${revision}</version>
    <name>apra</name>

      <repositories>
        <repository>
          <snapshots>
            <enabled>false</enabled>
          </snapshots>
          <id>central</id>
          <name>libs-release</name>
          <url>http://artifactory.faa.gov:8081/artifactory/libs-release</url>
        </repository>
        <repository>
          <snapshots />
          <id>snapshots</id>
          <name>libs-snapshot</name>
          <url>http://artifactory.faa.gov:8081/artifactory/libs-snapshot</url>
        </repository>
        <repository>
          <snapshots/>
          <id>faa-apra</id>
          <name>faa-apra</name>
          <url>http://artifactory.faa.gov:8081/artifactory/faa-apra</url>
        </repository>
      </repositories>


    <build>
        <finalName>apra</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <inherited>true</inherited>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.11</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.70</minimum>
                                        </limit>
                                    </limits>
                                    <includes>
                                        <include>gov.faa.ait.apra.api.*</include>
                                    </includes>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.glassfish.jersey</groupId>
                <artifactId>jersey-bom</artifactId>
                <version>${jersey.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
            	<groupId>org.glassfish.jersey.containers</groupId>
            	<artifactId>jersey-container-servlet</artifactId>
            	<version>2.41</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-moxy</artifactId>
        </dependency>
        <dependency>
        	<groupId>org.apache.logging.log4j</groupId>
        	<artifactId>log4j-core</artifactId>
        	<version>2.23.1</version>
        </dependency>
        <dependency>
        	<groupId>org.apache.logging.log4j</groupId>
        	<artifactId>log4j-slf4j-impl</artifactId>
        	<version>2.23.1</version>
        </dependency>
        <dependency>
        	<groupId>org.apache.logging.log4j</groupId>
        	<artifactId>log4j-api</artifactId>
        	<version>2.23.1</version>
        </dependency>
        <dependency>
        	<groupId>org.junit.jupiter</groupId>
        	<artifactId>junit-jupiter</artifactId>
        	<version>5.10.2</version>
        	<scope>test</scope>
        </dependency>
        <dependency>
        	<groupId>org.junit.jupiter</groupId>
        	<artifactId>junit-jupiter-api</artifactId>
        	<version>5.10.2</version>
        	<scope>test</scope>
        </dependency>
        <dependency>
        	<groupId>org.mockito</groupId>
        	<artifactId>mockito-core</artifactId>
        	<version>5.11.0</version>
        	<scope>test</scope>
        </dependency>
        <dependency>
        	<groupId>org.mockito</groupId>
        	<artifactId>mockito-junit-jupiter</artifactId>
        	<version>5.11.0</version>
        	<scope>test</scope>
        </dependency>
        <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-databind</artifactId>
           <version>2.15.2</version>
         </dependency>
        <dependency>
        	<groupId>com.fasterxml.jackson.core</groupId>
        	<artifactId>jackson-core</artifactId>
        	<version>2.15.2</version>
        </dependency>
        <dependency>
        	<groupId>io.swagger</groupId>
        	<artifactId>swagger-jersey2-jaxrs</artifactId>
        	<version>1.5.0</version>
        </dependency>
        <dependency>
        	<groupId>org.apache.logging.log4j</groupId>
        	<artifactId>log4j-web</artifactId>
        	<version>2.23.1</version>
        </dependency>
        <dependency>
        	<groupId>gov.faa.ait</groupId>
        	<artifactId>apraresponse</artifactId>
        	<version>[1.0,2.0)</version>
        </dependency>
        <dependency>
        	<groupId>org.glassfish.jersey.containers</groupId>
        	<artifactId>jersey-container-servlet</artifactId>
        </dependency>
        <dependency>
        	<groupId>org.glassfish.jersey.core</groupId>
        	<artifactId>jersey-client</artifactId>
        	<version>2.41</version>
        </dependency>
        <dependency>
        	<groupId>org.glassfish.jersey.inject</groupId>
        	<artifactId>jersey-hk2</artifactId>
        	<version>2.41</version>
        </dependency>
        <dependency>
        	<groupId>javax.ws.rs</groupId>
        	<artifactId>javax.ws.rs-api</artifactId>
        	<version>2.0.1</version>
        </dependency>
        <dependency>
        	<groupId>com.github.ben-manes.caffeine</groupId>
        	<artifactId>caffeine</artifactId>
        	<version>3.1.8</version>
        </dependency>
    </dependencies>
    <properties>
        <jersey.version>2.41</jersey.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>0</revision>
    </properties>
</project>
